v5.2
-----
+ Added regional price comparison feature which is fully configurable in options
+ Added sale information to wishlist entries
+ Added "ADD UNOWNED DLC TO CART" button on app pages
+ Added "Buy Wishlist" section to wishlist pages
: Fixed a bug where some inventory market links were not functioning correctly

v5.1.1
-----
+ Added support for homepage highlighting on the Autumn / Spring sale
: Fixed a bug where some some strings weren't being translated properly
: Fixed a bug where one option wasn't able to be checked or unchecked

v5.1
-----
+ Added an "Add to Wishlist" button on community app hubs
+ Added spam comment hiding from Workshop submissions and profiles
+ Added market link support for TF2, Dota 2, and CS:GO inventory items
+ Added a "game you do own" filter to friend's all games page
+ Added "Report Bug / Suggest Feature" to Enhanced Steam menu
+ Added reset options button to options page, instantly resetting all options to default
: Restyled options page
: Restyled Greenlight banner and added to software, concept and collection items.
: Fixed a bug with options link within Enhanced Steam menu
: Fixed a bug where continuous scrolling wasn't working under some circumstances
: Fixed a bug where active market listings total wasn't calculating correctly for some users

v5.0
-----
+ Redesigned the navigation on the options page
+ Adds SteamCharts.com information on game pages
+ Adds "total playtime" to the all games page
+ Adds a "games you don't own" filter to friend's all games pages
+ Added platform icons to items on the wishlist page
+ Added active listing total to marketplace homepage
+ Added WSGF certifications for 21:9 (Ultra-Widescreen) and 4K UHD certified games
+ Added support for IndieGameStand price histories
+ Added support for showing booster pack market prices in your inventory
: Made a ton of behind-the-scenes bugfixes and code updates
: Fixed bug where card drops were calculating incorrectly for some users