@@ -88,6 +88,7 @@ var localized_strings,
             remove: "Remove",
             view_in: "View in",
 			view_marketplace: "View marketplace",
+            not_marketable: "Not Marketable",
 			no_results_found: "No results found",
 			wiki_article: "View __pcgw__ Article",
             clear_cache: "Clear cached data",
@@ -242,6 +243,7 @@ var localized_strings,
                 save: "Uložit",
                 saved: "Uloženo",
                 view_in: "Ukázat v",
+                not_marketable: "Neprodejné",
                 clear_cache: "Vyčistit data uložená v mezipaměti",
                 forums: "Fóra",
                 coupon_available: "Máte dostupný kupón!",
@@ -309,6 +311,7 @@ var localized_strings,
                 save: "Speichern",
                 saved: "Gespeichert",
                 view_in: "In ansehen",
+                not_marketable: "Nicht marktfähig",
                 clear_cache: "Gecachte Daten löschen",
                 forums: "Foren",
                 coupon_available: "<font size=5>Sie haben einen Gutschein zur Verfügung!</font>",
@@ -391,6 +394,7 @@ var localized_strings,
                 remove: "Eliminar",
                 view_in: "Ver en",
 				view_marketplace: "Ver en el mercado",
+                not_marketable: "No comerciable",
 				wiki_article: "Ver artículo __pcgw__",
                 clear_cache: "Borrar datos de la caché",
                 forums: "Foros",
@@ -578,6 +582,7 @@ var localized_strings,
                 remove: "Retirer",
                 view_in: "Voir sur",
 				view_marketplace: "Voir le Marché",
+                not_marketable: "Non négociable",
 				no_results_found: "Aucun résultat trouvé",
 				wiki_article: "Voir l'article __pcgw__",
                 clear_cache: "Vider le cache de données",
@@ -751,6 +756,7 @@ var localized_strings,
                 remove: "Kaldır",
                 view_in: "Görüntüle:",
                 view_marketplace: "Pazar'a Git",
+                not_marketable: "Pazarlanamaz",
 			    wiki_article: "__pcgw__ Makalesini Gör",
                 clear_cache: "Önbelleği temizle",
                 forums: "Forumlar",
@@ -915,6 +921,7 @@ var localized_strings,
                 remove: "Rimuovi",
                 view_in: "Mostra in",
                 view_marketplace: "Mostra marketplace",
+                not_marketable: "Non vendibile",
                 wiki_article: "Mostra articolo su __pcgw__",
                 clear_cache: "Elimina cache",
                 forums: "Forums",
@@ -1089,6 +1096,7 @@ var localized_strings,
                 remove: "削除",
                 view_in: "次で表示",
 				view_marketplace: "マーケットプレイスを表示",
+                not_marketable: "売買不可",
 				wiki_article: "__pcgw__ の記事を表示",
                 clear_cache: "キャッシュされたデータをクリア",
                 reset_options: "オプションをリセット",
@@ -1207,6 +1215,7 @@ var localized_strings,
                 add_to_cart: "Aan winkelwagen toevoegen",
                 drm_third_party: "Waarschuwing: Dit programma maakt gebruik van DRM van derden",
                 empty_cart: "Winkelwagen leegmaken",
+                not_marketable: "Niet verhandelbaar",
                 events_view_all: "ALLES BEKIJKEN",
                 events: "Evenementen",
                 dlc_data_header: "Details over downloadbare inhoud",
@@ -1284,6 +1293,7 @@ var localized_strings,
 				saved: "Zapisano",
 				remove: "Usuń",
 				view_in: "Pokaż w",
+                not_marketable: "Niezbywalne",
 				clear_cache: "Wyczyść pamięć podręczną",
 				forums: "Forum",
 				games: "Gry",
@@ -1430,7 +1440,8 @@ var localized_strings,
                 saved: "Salvo",
                 remove: "Remover",
                 view_in: "Ver em",
-		view_marketplace: "Ver Mercado",                
+                view_marketplace: "Ver Mercado",
+                not_marketable: "Não comercializável",
                 wiki_article: "Ver artigo __pcgw__",
                 clear_cache: "Limpar dados no cache",
                 forums: "Fóruns",
@@ -1570,6 +1581,7 @@ var localized_strings,
                 saved: "Сохранено",
                 remove: "Убрать",
                 view_in: "Просмотреть в",
+                not_marketable: "Нельзя продавать",
                 clear_cache: "Очистить кэшированную информацию",
                 forums: "Форумы",
                 coupon_available: "У вас есть купон!",
@@ -1671,6 +1683,7 @@ var localized_strings,
 				saved: "已保存",
 				remove: "移除",
 				view_in: "查看",
+                not_marketable: "不可出售",
 				clear_cache: "清除缓存数据",
 				forums: "论坛",
 				games: "游戏",
